# PRUEBIS2

./: .gitignore  CMakeLists.txt  main  main.cpp  makefile  prueba.txt
include/: Buffer.h  BufferManager.h  BufferPool.h  BufferPoolManager.h  Frame.h  LRU.h  Page.h
src/: Buffer.cpp  BufferManager.cpp  BufferPool.cpp  BufferPoolManager.cpp  Buffer_Pool.cpp  Frame.cpp  LRU.cpp  Page.cpp
